--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ altair==4.2.2
 attr==0.3.2
 ConfigParser==7.0.0
 cryptography==39.0.1
-Cython==3.0.10
+Cython
 dl==0.1.0
 docutils==0.18.1
 docutils==0.18.1
@@ -11,7 +11,7 @@ HTMLParser==0.0.2
 ipython==8.10.0
 ipywidgets==7.7.5
 Jinja2==3.1.2
-jnius==1.1.0
+jnius
 keyring==23.4.0
 lockfile==0.12.2
 matplotlib==3.7.0
