--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,6 @@ docutils==0.18.1
 docutils==0.18.1
 Flask==2.2.2
 HTMLParser==0.0.2
-ipython==8.10.0
-ipywidgets==7.7.5
 Jinja2==3.1.2
 keyring==23.4.0
 lockfile==0.12.2
@@ -17,8 +15,7 @@ msal==1.28.0
 numpy==1.23.5
 pandas==1.5.3
 peakutils==1.3.4
-Pillow==9.5.0
-Pillow==10.3.0
+Pillow
 plotly==5.9.0
 plotnine==0.13.4
 protobuf==3.20.3
@@ -29,9 +26,7 @@ railroad==0.5.0
 reportlab==3.6.13
 scipy==1.10.0
 seaborn==0.13.2
-shiny==0.8.1
 Sphinx==5.0.2
-st_static_export==0.2.0
 streamlit==1.20.0
 thread==1.1.1
 tornado==6.3.2
