--- a/requirements.txt
+++ b/requirements.txt
@@ -17,16 +17,14 @@ pandas
 peakutils==1.3.4
 Pillow
 plotly==5.9.0
-plotnine==0.13.4
 protobuf==3.20.3
 pyOpenSSL==24.1.0
 PyWavelets==1.4.1
 railroad==0.5.0
-reportlab==3.6.13
 scipy==1.10.0
-seaborn==0.13.2
+seaborn
 Sphinx==5.0.2
-streamlit==1.20.0
+streamlit
 thread==1.1.1
 tornado==6.3.2
 trove_classifiers==2024.4.10
